# bigheadct

./: .dockerignore  .env.novo  .gitignore  README.md  compose.local.yml  compose.production.yml  docker-compose.yml  easypanel.yml  eslint.config.mjs  instrumentation-client.js  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  sentry.edge.config.js  sentry.server.config.js  tasklist.md  turbo.json
apps/api/: package.json  pyproject.toml
apps/api/src/bighead_api/: __main__.py  config.py  crm_integrations.py  errors.py  health.py  logging.py  main.py  observability.py
apps/api/src/bighead_api/administration/: __init__.py  models.py  routes.py  service.py
apps/api/src/bighead_api/artifacts/: __init__.py  models.py  routes.py  service.py
apps/api/src/bighead_api/collaboration/: __init__.py  models.py  routes.py  service.py
apps/api/src/bighead_api/commercial/: __init__.py  models.py  routes.py  service.py
apps/api/src/bighead_api/discovery/: __init__.py  models.py  routes.py  service.py
apps/api/src/bighead_api/governance/: __init__.py  hermes_sync.py  ingestion.py  models.py  routes.py  run_policy.py  service.py
apps/api/src/bighead_api/identity/: __init__.py  auth.py  (+4 more)
apps/api/tests/: test_administration_api.py  test_agent_hermes_integration.py  test_anything_llm_client.py  test_artifacts_api.py  test_collaboration_api.py  test_commercial_api.py  test_config.py  test_crm_integrations.py  test_database_context.py  test_discovery_api.py  test_governance_api.py  test_governance_service.py  test_health.py  test_hermes_client.py  test_hermes_sync.py  test_identity_api.py  test_identity_auth_provider.py  test_ingestion_service.py  test_openapi_contract.py  test_run_policy.py  test_run_policy_integration.py  test_smoke_rag.py  test_smoke_run.py  test_supabase_headers.py  test_supabase_integration.py
apps/worker/: package.json  pyproject.toml
apps/worker/src/bighead_worker/: __init__.py  __main__.py  artifact_scan.py  config.py  crm_gateway.py  ingestion.py  jobs.py  llm_gateway.py  main.py  observability.py  outbox.py  privacy.py  runs.py  webhooks.py
apps/worker/tests/: test_artifact_scan.py  test_config.py  test_crm_gateway.py  test_hermes_executor.py  test_ingestion.py  test_jobs.py  test_llm_gateway.py  test_outbox.py  test_outbox_integration.py  test_privacy.py  test_runs.py  test_runs_integration.py  test_webhooks.py
(+428 files in other folders)
