[project]
name = "bigheadct-api"
version = "0.1.0"
description = "API principal do BigHead"
requires-python = "==3.14.*"
dependencies = [
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "opentelemetry-api>=1.36.0",
  "opentelemetry-instrumentation-fastapi>=0.57b0",
  "opentelemetry-exporter-otlp-proto-http>=1.36.0",
  "opentelemetry-sdk>=1.36.0",
  "orjson>=3.11.2",
  "pydantic-settings>=2.10.1",
  "pydantic>=2.11.7",
  "redis>=5.2.1,<6",
  "sentry-sdk[fastapi]>=2.54.0",
  "sqlalchemy>=2.0.43",
  "structlog>=25.4.0",
  "uvicorn>=0.35.0",
  "bigheadct-pycore"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8.6",
  "mypy>=1.17.1",
  "pip-audit>=2.9.0",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "pytest>=8.4.1",
  "respx>=0.22.0",
  "ruff>=0.12.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bigheadct-pycore = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/bighead_api"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests"]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
]
