[project]
name = "bigheadct-worker"
version = "0.1.0"
description = "Worker de execucao do BigHead"
requires-python = "==3.14.*"
dependencies = [
  "arq>=0.26.3",
  "httpx>=0.28.1",
  "jsonschema>=4.25.1",
  "opentelemetry-api>=1.36.0",
  "opentelemetry-exporter-otlp-proto-http>=1.36.0",
  "opentelemetry-sdk>=1.36.0",
  "pydantic-settings>=2.10.1",
  "pydantic>=2.11.7",
  "redis>=5.2.1,<6",
  "sentry-sdk>=2.54.0",
  "structlog>=25.4.0",
  "bigheadct-pycore"
]

[project.optional-dependencies]
dev = [
  "asyncpg>=0.30.0",
  "bandit>=1.8.6",
  "mypy>=1.17.1",
  "pip-audit>=2.9.0",
  "pytest-asyncio>=1.1.0",
  "pytest>=8.4.1",
  "ruff>=0.12.9",
  "types-jsonschema>=4.25.1.20251009"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bigheadct-pycore = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/bighead_worker"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
